# non_arg_template

./: CMakeLists.txt  README
common/: CMakeLists.txt  binary_conversion.cpp  binary_conversion.h
tests/: CMakeLists.txt  test_01.cpp  test_02.cpp  test_03.cpp  test_04.cpp  test_template.h
v01/: to_text.h
v02/: to_text.h
v03/: CMakeLists.txt  to_text.cpp  to_text.h
v04/: CMakeLists.txt  to_text.cpp  to_text.h
